welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: type mismatch;
 found   : java.awt.Color
 required: Int
        tab(j)=getCouleurSol();
                            ^Array1:14: error: type mismatch;
 found   : Int
 required: java.awt.Color
      setCouleurBrosse(tab(j));
                          ^Array1:15: error: not found: value baisserBrosse
      baisserBrosse()
      ^