welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  
  var tab=new Array[Int](getMondeHauteur());
  
  for(i <- 1 to getMondeHauteur())
  {
    for(j <- 1 to getMondeHauteur())
    {
      if(i==1)
      {
        tab(j)=getCouleurSol();
      }
      setCouleurBrosse(tab(j));
      baisserBrosse()
      avance();
    }
    gauche()
    avance()
    droite()
    avance()
  }
  
}